--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,18 +41,22 @@ dependencies:
   provider: ^6.1.5
   intl: ^0.20.2
   printing: ^5.14.2
+  flutter_local_notifications: ^17.0.0
+  permission_handler: ^12.0.0+1
+  flutter_launcher_icons: ^0.14.3
   pdf: ^3.11.3
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^5.0.0
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/icon.png"
+  min_sdk_android: 21 # android min sdk min:16, default 21
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -66,6 +70,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/images/icon.png
     - assets/images/logo.png
     - assets/images/histori.png
     - assets/images/ph.png
